feat: crud methods
