# src/models/statusData.ts
@@ -1,0 +1,15 @@
+export interface StatusData {
+    taskId: string;
+    userId?: string;
+    fileName?: string;
+    directoryName?: string;
+    fileURI?: string;
+    progress?: number;
+    status?: string;
+    bbox?: string;
+    estimatedFileSize?: string;
+    realFileSize?: string;
+    creationTime?: string;
+    lastUpdatedTime?: string;
+    expirationTime?: string;
+}
